#pragma once

class DetecteurDistance {
public:
    virtual double obtenirDistanceMetres() = 0;
};
