#pragma once

class Temporisation {
public:
    virtual void tick() = 0;
};
